<resources>
    <string name="app_name">DataStorage</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="email">Correo</string>
    <string name="contra">Contrasena</string>
    <string name="edad">Edad</string>
    <string name="guardar">Acceder</string>
    <string name="registro">Registro</string>
    <string name="nombre_Prof">Nombre: %1$s</string>
    <string name="correo_Prof">E-Mail: %1$s</string>
    <string name="contra_Prof">Contraseña: %1$s</string>
    <string name="edad_Prof">Edad: %1$d</string>

    <string name="nombre_Movie">%1$s</string>
    <string name="descripcion_Movie">%1$s</string>
    <string name="date_Movie">Fecha Lanzamiento: %1$s</string>
    <string name="popularity_Movie">Popularidad: %1$d</string>
    <string name="vote_Movie">Votacion: %1$d</string>
    <string name="add_movie">Añadir Pelicula</string>


    <string name="registrar">Registrar</string>
    <string name="volver">Volver</string>
    <string name="redirect_User">Lista Usuarios</string>
    <string name="redirect_Movies">Lista Peliculas TOP</string>
    <string name="add_movies">Buscar Pelicula</string>
    <string name="my_movies">Mis Peliculas</string>
    <string name="description_Movie">Descripcion</string>
    <string name="search">Buscar</string>
</resources>
